--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPt+sopy0CpAOYH+zyfD6iF",
+      "authorship_tag": "ABX9TyMnt43CfKW5CiRLS9PSMVkW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,11 +39,11 @@
       "metadata": {
         "id": "yovP3E5aaDhf",
         "colab_type": "code",
+        "outputId": "8a2fd5fe-281e-40a1-8d4c-82a801dba0bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8a2fd5fe-281e-40a1-8d4c-82a801dba0bc"
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -60,7 +60,7 @@
         "import tensorflow_docs.modeling\n",
         "\n"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,17 +91,17 @@
       "metadata": {
         "id": "7bZj7He9bDbA",
         "colab_type": "code",
+        "outputId": "1a4b3443-dd16-4a96-be2c-affd5b0ff7ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1a4b3443-dd16-4a96-be2c-affd5b0ff7ce"
+        }
       },
       "source": [
         "dataset_path = keras.utils.get_file(\"auto-mpg.data\", \"http://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.data\")\n",
         "dataset_path"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,11 +132,11 @@
       "metadata": {
         "id": "PXV_RWZnb3U4",
         "colab_type": "code",
+        "outputId": "3218720f-c920-409b-fef1-c4a704a56088",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "3218720f-c920-409b-fef1-c4a704a56088"
+        }
       },
       "source": [
         "column_names = ['MPG','Cylinders','Displacement','Horsepower','Weight',\n",
@@ -149,7 +149,7 @@
         "dataset = raw_dataset.copy()\n",
         "dataset.tail()"
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +268,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**split into train and test**"
+        "# **Split into train and test**"
       ]
     },
     {
@@ -290,16 +290,16 @@
       "metadata": {
         "id": "7_R93d2ldee6",
         "colab_type": "code",
+        "outputId": "f2b64fb2-e3ca-42cc-e5ec-f8f00e10d832",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 764
-        },
-        "outputId": "f2b64fb2-e3ca-42cc-e5ec-f8f00e10d832"
+        }
       },
       "source": [
         "sns.pairplot(train_dataset[[\"MPG\", \"Cylinders\", \"Displacement\", \"Weight\"]], diag_kind=\"kde\")"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,11 +471,11 @@
       "metadata": {
         "id": "JV-xy1QogPM6",
         "colab_type": "code",
+        "outputId": "79c8f277-b062-4485-b2be-309b53f91bc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "79c8f277-b062-4485-b2be-309b53f91bc0"
+        }
       },
       "source": [
         "EPOCHS = 1000\n",
@@ -485,7 +485,7 @@
         "  epochs=EPOCHS, validation_split = 0.2, verbose=0,\n",
         "  callbacks=[tfdocs.modeling.EpochDots()])"
       ],
-      "execution_count": 70,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
